completed css grid

--- a/Css Grid/index.html
+++ b/Css Grid/index.html
@@ -61,7 +61,8 @@
                 <br>
                 <a href="mosaic.html">Click here for mosaic layout</a>
                 <br>
-                <a href="eg.html">Example 1</a>
+                <a href="eg.html">Example 1</a><br>
+                <a href="responsive.html">Responsive site</a>
             </div>
 
         </body>
