--- a/Css Grid/responsive.html
+++ b/Css Grid/responsive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Example 1</title>
+        <title>Responsive Site</title>
         <style>
             body{
                 background-color: rgb(207, 207, 207);
@@ -12,7 +12,25 @@
             
             #content{
                 display: grid;
-                /* grid-template-columns: repeat(4,1fr); */
+                grid-auto-rows:minmax(100px, auto);
+                max-width: 960px;
+                margin:0 auto;
+                grid-gap:10px;
+                grid-template-areas:
+                "header header header header"
+                "footer footer footer footer"
+                "main main main main"
+                "main main main main"
+                "aside aside nav nav"
+                "section section section section"
+                "section section section section"
+            }
+
+            @media screen and (min-width:  760px){
+            
+            #content{
+                display: grid;
+                grid-template-columns: repeat(4,1fr);
                 grid-auto-rows: minmax(100px,auto);
                 grid-gap: 10px;
                 max-width: 960px;
@@ -25,6 +43,7 @@
                 "section section section section"
                 "section section section section"
                 "footer footer footer footer"
+            }
             }
 
 
@@ -72,3 +91,6 @@
         </div>              
     </body>
 </html>
+
+        </style>
+    </head>
