--- a/1/public/index.html
+++ b/1/public/index.html
@@ -17,7 +17,7 @@
                 <div class="flex justify-between items-center py-3">
                     <h1 class="font-bold uppercase border-b">
                         <a href="/" class="hover:text-gray-800 ml-3">
-                            Food Ninja
+                            Food Frenzy
                         </a>
                     </h1>
                     <div class="px-4 cursor-pointer md:hidden" id="burger">
@@ -58,7 +58,7 @@
 
     <header>
         <h2 class="text-gray-700 text-6xl font-semibold">Recipes</h2>
-        <h3 class="text-2xl font-semibold">For Ninjas</h3>
+        <h3 class="text-2xl font-semibold">For Everybody</h3>
     </header>
     
     <div>
@@ -97,7 +97,7 @@
                 <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-                <span>25 mins</span>
+                <span>15 mins</span>
             </div>
         </div>
 
@@ -116,7 +116,7 @@
                 <svg class="w-5 inline-block" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
                 </svg>
-                <span>25 mins</span>
+                <span>35 mins</span>
             </div>
             </div>
 
