--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -9,11 +9,6 @@
 
     works
   
-    <script src="Index.js"></script>
-    <script src="Strings.js"></script>
-    <script src="MathFunctions.js"></script>
-    <script src="Array.js"></script>
-    <script src="UndefinedNullBoolean.js"></script>
-    <script src="ConvertingDataTypes.js"></script>
+    <script src="functionsAndMethods.js"></script>
 </body>
 </html>
