--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -10,6 +10,6 @@
     works
   
     <ul class="people"></ul>
-    <script src="functionsAndMethods.js"></script>
+    <script src="objects.js"></script>
 </body>
 </html>
