--- a/flexbox/flex grid/index.html
+++ b/flexbox/flex grid/index.html
@@ -21,7 +21,7 @@
             </nav>
             
             <div style="margin: 20px;">
-                <span>Layout": </span>
+                <span>Layout: </span>
                 <a href="#" class="stack">Stack</a>
                 <a href="#" class="grid">Grid</a>
             </div>
